# KP_OOP

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/: assets.json  departments.json  movements.json
docs/: api.md  architecture.md  build.md  decisions.md  domain-model.md  roadmap.md
src/: main.cpp
src/api/: AssetController.cpp  AssetController.h  DepartmentController.cpp  DepartmentController.h  HttpJson.h  MovementController.cpp  MovementController.h  ReportController.cpp  ReportController.h
src/domain/: AssetMovement.cpp  AssetMovement.h  AssetStatus.h  Building.cpp  Building.h  Department.cpp  Department.h  FixedAsset.cpp  FixedAsset.h  MaintenanceRecord.cpp  MaintenanceRecord.h  MovementType.h  OfficeEquipment.cpp  OfficeEquipment.h  ProductionEquipment.cpp  ProductionEquipment.h  ToyCategory.h  Vehicle.cpp  Vehicle.h
src/exceptions/: DomainException.h
src/repository/: IAssetRepository.h  IDepartmentRepository.h  IMovementRepository.h  JsonAssetRepository.cpp  JsonAssetRepository.h  JsonDepartmentRepository.cpp  JsonDepartmentRepository.h  JsonFile.cpp  JsonFile.h  JsonMapper.cpp  JsonMapper.h  JsonMovementRepository.cpp  JsonMovementRepository.h
src/server/: HttpServer.cpp  HttpServer.h
src/service/: AssetFilter.h  AssetService.cpp  AssetService.h  DepartmentService.cpp  DepartmentService.h  MovementService.cpp  MovementService.h  ReportFormatter.cpp  ReportFormatter.h  ReportService.cpp  ReportService.h
src/util/: Date.cpp  Date.h  Money.cpp  Money.h
web/: assets.html  index.html  reports.html
(+5 files in other folders)
